objects/dupcheck__dc3Duplicate__c.object
<CustomObject>
    <fields>
        <fullName>dupcheck__Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__Group__c</fullName>
        <formula>dupcheck__dcGroup__r.dupcheck__group__c</formula>
        <label>Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__HasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__MatchObject__c</fullName>
        <externalId>true</externalId>
        <label>Match Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__Score__c</fullName>
        <label>Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dupcheck__SourceObject__c</fullName>
        <externalId>true</externalId>
        <label>Source Object</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcGroup__c</fullName>
        <label>Duplicate Check Group</label>
        <referenceTo>dupcheck__dcGroup__c</referenceTo>
        <relationshipLabel>Duplicate Check Duplicates</relationshipLabel>
        <relationshipName>Duplicate_Check_Duplicates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dupcheck__dcJob__c</fullName>
        <label>Duplicate Check Job</label>
        <referenceTo>dupcheck__dcJob__c</referenceTo>
        <relationshipLabel>Duplicate Check Duplicates</relationshipLabel>
        <relationshipName>Duplicate_Check_Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dupcheck__handled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Handled</label>
        <type>Checkbox</type>
    </fields>
    <label>Duplicate Check Duplicate</label>
    <nameField>
        <displayFormat>DUP{0000000000}</displayFormat>
        <label>Duplicate Check Duplicate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Check Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>